[gd_scene load_steps=13 format=3 uid="uid://c4gv44i1sobp4"]

[ext_resource type="Script" path="res://game/system dismantle/PickableManager.gd" id="2_572vh"]
[ext_resource type="PackedScene" uid="uid://c4kdtl1aduc5k" path="res://game/system dismantle/key items/key_item_template.tscn" id="3_454tk"]
[ext_resource type="PackedScene" uid="uid://1desgh3x7s5c" path="res://game/world/system camera/mod_cam_shake.tscn" id="3_rlvxh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b13pc"]
albedo_color = Color(0.890196, 0.890196, 0.890196, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_c204r"]
material = SubResource("StandardMaterial3D_b13pc")
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_i8dkt"]
size = Vector3(10, 0.1, 10)

[sub_resource type="Environment" id="Environment_qh8qx"]
background_mode = 1
background_color = Color(0.745098, 0.792157, 0.960784, 1)
fog_enabled = true

[sub_resource type="Curve" id="Curve_8vt14"]
_data = [Vector2(0.0662984, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_2walj"]
curve = SubResource("Curve_8vt14")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p4ukf"]
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
radial_velocity_max = 355.77
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
radial_accel_min = -100.0
attractor_interaction_enabled = false
scale_min = 0.5
emission_curve = SubResource("CurveTexture_2walj")

[sub_resource type="Gradient" id="Gradient_rq4lo"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_htjoo"]
gradient = SubResource("Gradient_rq4lo")
width = 12

[node name="WorkSpace" type="Node3D"]

[node name="PickableManager" type="Node" parent="."]
script = ExtResource("2_572vh")

[node name="MainCam" type="Camera3D" parent="."]
transform = Transform3D(1, -5.95416e-16, 2.4663e-16, 2.4663e-16, 0.707107, 0.707107, -5.95416e-16, -0.707107, 0.707107, 2.08165e-12, 6, 5.7)
fov = 10.0
near = 0.004

[node name="CamShake" parent="MainCam" instance=ExtResource("3_rlvxh")]

[node name="MainObject" type="Node3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 0, 0)

[node name="MainBody" parent="MainObject" instance=ExtResource("3_454tk")]

[node name="PickedComponent" type="Node3D" parent="."]

[node name="DismantledComponent" type="Node3D" parent="."]

[node name="Surface" type="StaticBody3D" parent="." groups=["dismantleSurface"]]

[node name="Mesh" type="MeshInstance3D" parent="Surface"]
mesh = SubResource("PlaneMesh_c204r")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Surface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.05, 2.08165e-12)
shape = SubResource("BoxShape3D_i8dkt")

[node name="Env" type="Node3D" parent="."]

[node name="Ambient" type="WorldEnvironment" parent="Env"]
environment = SubResource("Environment_qh8qx")

[node name="Sun" type="DirectionalLight3D" parent="Env"]
transform = Transform3D(-0.766044, -0.642787, -2.80971e-08, -1.5246e-23, -4.37114e-08, 1, -0.642788, 0.766044, 3.34849e-08, 2.08165e-12, 5, 2.08165e-12)
light_energy = 0.5
shadow_enabled = true
shadow_blur = 0.5

[node name="SpotLight3D" type="SpotLight3D" parent="Env"]
transform = Transform3D(1, -5.95416e-16, 2.4663e-16, 2.4663e-16, 0.707107, 0.707107, -5.95416e-16, -0.707107, 0.707107, 2.08165e-12, 3, 2.08165e-12)
light_energy = 3.0
shadow_enabled = true
shadow_blur = 0.1
distance_fade_enabled = true

[node name="FXClick" type="GPUParticles2D" parent="."]
top_level = true
texture_filter = 1
emitting = false
process_material = SubResource("ParticleProcessMaterial_p4ukf")
texture = SubResource("GradientTexture1D_htjoo")
lifetime = 0.75
one_shot = true
speed_scale = 4.5
explosiveness = 1.0
fixed_fps = 24
trail_enabled = true
trail_lifetime = 0.15
trail_sections = 2
trail_section_subdivisions = 1
